# ghr

./: .env  .gitignore  Cargo.toml  LICENSE  README.adoc
.github/workflows/: ci.yml
.sqlx/: query-3959b64a7b4973d0c7d3f837c2d88668251f4e540aacf0d77b9e82bffabc3a33.json  query-927b947271157a8eac92a8e9ee68d4f909daca1270a5fdc0e3e26627cbdb8596.json
backend/: .env  Cargo.toml  DESIGN.adoc  SETUP.md  table.sql
backend/.sqlx/: query-3c35d1f6cbf47fdf4cac2654501e5e6488f52b859442c8fa807d8d030c03840b.json  query-4e5c1a293110d99c27ce2770da999148e7f389472eef7791077a9e69f1b30573.json
backend/src/: args.rs  config.rs  db.rs  main.rs  state.rs
cli/: Cargo.toml  build.rs  ghr.json
cli/src/: args.rs  log.rs  main.rs
cli/src/subcommands/: mod.rs  save.rs  upload.rs
frontend/: biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  globals.scss  layout.tsx  page.module.css  page.tsx
frontend/src/app/components/cmp_icon/: page.ts
frontend/src/app/components/footer/: footer.module.scss  page.tsx
frontend/src/app/components/report_listing/: page.tsx
frontend/src/app/components/report_listing/tile/: mod.tsx  tile.module.scss
frontend/src/app/m3/button/: Button.module.scss  page.tsx
frontend/src/app/navbar/: layout.tsx  page.tsx
frontend/src/app/report/: page.tsx
libghr/: Cargo.toml  justfile
libghr/.cargo/: config.toml
libghr/examples/: pastebin.rs  report.rs  save_as_json.rs  save_wmi.rs  send_to_server.rs
libghr/src/: error.rs  lib.rs  prelude.rs
libghr/src/report/: mod.rs  os.rs  system_config.rs
libghr/src/report/bus/: mod.rs
libghr/src/report/components/: cpu.rs  mod.rs  pci.rs  ram.rs  usb.rs
libghr/src/report/components/cpu/: linux.rs  mod.rs  windows.rs
libghr/src/report/components/gpu/: mod.rs  nvidia.rs  windows.rs
libghr/src/report/components/gpu/linux/: amdgpu.rs  generic.rs  i915.rs  mod.rs
libghr/src/report/components/nic/: linux.rs  mod.rs  windows.rs
libghr/src/report/components/pci/: linux.rs  mod.rs  windows.rs
libghr/src/report/components/psu/: linux.rs  mod.rs  windows.rs
libghr/src/report/components/storage/: linux.rs  mod.rs  windows.rs
libghr/src/report/machine/: hash.rs  mod.rs
libghr/src/report/os/: mod.rs  unix.rs  windows.rs
libghr/src/report/system_config/: mod.rs
libghr/src/report/system_config/sleep/: linux.rs  mod.rs  windows.rs
libghr/src/report/util/: linux.rs  mod.rs
libghr/tests/assets/linux/sysfs/etc/: os-release
libghr/tests/assets/linux/sysfs/sys/class/block/sda/device/: model
libghr/tests/assets/linux/sysfs/sys/class/drm/card1/device/: mem_info_vram_total  pp_dpm_mclk  pp_dpm_sclk
libghr/tests/assets/linux/sysfs/sys/class/net/enp7s0/device/: device
libghr/tests/assets/linux/sysfs/sys/class/net/wlo1/device/: device
libghr/tests/assets/linux/sysfs/sys/class/power_supply/BAT1/: energy_full  energy_full_design  model_name
libghr/tests/assets/linux/sysfs/sys/devices/system/cpu/cpu0/cpufreq/: cpuinfo_max_freq
libghr/tests/assets/linux/sysfs/sys/power/: state
libghr/tests/assets/windows/: ax200_nic.json  cpu.json  sls2_battery.json  sls2_nvme_storage.json
shared/: Cargo.toml
shared/src/: lib.rs
