[package]
name = "ghr"
description = "Upload computer hardware reports"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive", "color"] }
indicatif = "0.17.8"
reqwest = "0.12.9"
termcolor = "1.4.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "fs"] }
libghr = { path = "../libghr" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
constcat = "0.5.1"
dirs = "5.0.1"
human-panic = "2.0.2"
chrono = "0.4.38"
rpassword = "7.3.1"
colored = "2.1.0"
serde_json = "1.0.132"

[build-dependencies]
built = "0.7.5"
