[package]
name = "libghr"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
bs58 = "0.5.1"
mac_address = { version = "1.1.7", features = ["serde"] }
pisserror = "0.2.3"
rand = "0.8.5"
serde = { version = "1.0.210", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
    "serde_derive",
    "std",
] }
tokio = { version = "1.40.0", features = ["fs", "macros"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
tracing = { version = "0.1.40", features = ["async-await"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["feature"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Devices",
    "Win32_Devices_DeviceAndDriverInstallation",
] }
windows-version = "0.1.1"

[dev-dependencies]
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt"] }
