[package]
name = "libghr"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
mac_address = { version = "1.1.7", features = ["serde"] }
pisserror = "0.3.0-rc.1"
rand = "0.8.5"
regex = "1.11.0"
serde = { version = "1.0.210", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
    "serde_derive",
    "std",
] }
tokio = { version = "1.40.0", features = ["fs", "macros"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
tracing = { version = "0.1.40", features = ["async-await"] }
ts-rs = "10.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["feature"] }
usb-ids = "1.2024.4"
pci-ids = "0.2.5"
procfs = "0.17.0"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14.0"

windows-version = "0.1.1"

[dev-dependencies]
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt"] }
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12", features = ["json"] }
whoami = { version = "1.5.2", default-features = false }
rpassword = "7.3.1"
clap = { version = "4.5", features = ["derive"] }
